Untile/unmaximize a window during interactive resize after receiving user input

Currently, a tiled window will be untiled when you start interactive
resize. But there are clients that start interactive resize as soon as
they receive a button press around their edges, e.g. Firefox, which
results in unexpected untiling. Another argument is that it makes
interactive resizing and interactive move consistent, they both would
untile the window after explicit user input.

BUG: 470687
(cherry picked from commit 1e81fcb9be6ae321f024dc23fa2bba58a54bb5ae)