src/window.cpp
@@ -1185,48 +1185,6 @@ bool Window::startInteractiveMoveResize()
     m_interactiveMoveResize.initialQuickTileMode = quickTileMode();
     m_interactiveMoveResize.initialGeometryRestore = geometryRestore();
 
-    if (requestedMaximizeMode() != MaximizeRestore) {
-        switch (interactiveMoveResizeGravity()) {
-        case Gravity::Left:
-        case Gravity::Right:
-            // Quit maximized horizontally state if the window is resized horizontally.
-            if (requestedMaximizeMode() & MaximizeHorizontal) {
-                QRectF originalGeometry = geometryRestore();
-                originalGeometry.setX(moveResizeGeometry().x());
-                originalGeometry.setWidth(moveResizeGeometry().width());
-                setGeometryRestore(originalGeometry);
-                maximize(requestedMaximizeMode() ^ MaximizeHorizontal);
-            }
-            break;
-        case Gravity::Top:
-        case Gravity::Bottom:
-            // Quit maximized vertically state if the window is resized vertically.
-            if (requestedMaximizeMode() & MaximizeVertical) {
-                QRectF originalGeometry = geometryRestore();
-                originalGeometry.setY(moveResizeGeometry().y());
-                originalGeometry.setHeight(moveResizeGeometry().height());
-                setGeometryRestore(originalGeometry);
-                maximize(requestedMaximizeMode() ^ MaximizeVertical);
-            }
-            break;
-        case Gravity::TopLeft:
-        case Gravity::BottomLeft:
-        case Gravity::TopRight:
-        case Gravity::BottomRight:
-            // Quit the maximized mode if the window is resized by dragging one of its corners.
-            setGeometryRestore(moveResizeGeometry());
-            maximize(MaximizeRestore);
-            break;
-        default:
-            break;
-        }
-    }
-
-    if (isInteractiveResize() && m_tile && !m_tile->supportsResizeGravity(interactiveMoveResizeGravity())) {
-        setGeometryRestore(moveResizeGeometry());
-        setQuickTileModeAtCurrentPosition(QuickTileFlag::None);
-    }
-
     updateElectricGeometryRestore();
     checkUnrestrictedInteractiveMoveResize();
     Q_EMIT interactiveMoveResizeStarted();
@@ -1383,6 +1341,51 @@ void Window::updateInteractiveMoveResize(const QPointF &global, Qt::KeyboardModi
 
         nextMoveResizeGeom = nextInteractiveResizeGeometry(global);
         if (nextMoveResizeGeom != currentMoveResizeGeom) {
+            if (m_tile && !m_tile->supportsResizeGravity(gravity)) {
+                setGeometryRestore(nextMoveResizeGeom);
+                setQuickTileModeAtCurrentPosition(QuickTileFlag::None);
+                return;
+            }
+
+            if (requestedMaximizeMode() != MaximizeRestore) {
+                switch (interactiveMoveResizeGravity()) {
+                case Gravity::Left:
+                case Gravity::Right:
+                    // Quit maximized horizontally state if the window is resized horizontally.
+                    if (requestedMaximizeMode() & MaximizeHorizontal) {
+                        QRectF originalGeometry = geometryRestore();
+                        originalGeometry.setX(nextMoveResizeGeom.x());
+                        originalGeometry.setWidth(nextMoveResizeGeom.width());
+                        setGeometryRestore(originalGeometry);
+                        maximize(requestedMaximizeMode() ^ MaximizeHorizontal);
+                        return;
+                    }
+                    break;
+                case Gravity::Top:
+                case Gravity::Bottom:
+                    // Quit maximized vertically state if the window is resized vertically.
+                    if (requestedMaximizeMode() & MaximizeVertical) {
+                        QRectF originalGeometry = geometryRestore();
+                        originalGeometry.setY(nextMoveResizeGeom.y());
+                        originalGeometry.setHeight(nextMoveResizeGeom.height());
+                        setGeometryRestore(originalGeometry);
+                        maximize(requestedMaximizeMode() ^ MaximizeVertical);
+                        return;
+                    }
+                    break;
+                case Gravity::TopLeft:
+                case Gravity::BottomLeft:
+                case Gravity::TopRight:
+                case Gravity::BottomRight:
+                    // Quit the maximized mode if the window is resized by dragging one of its corners.
+                    setGeometryRestore(nextMoveResizeGeom);
+                    maximize(MaximizeRestore);
+                    return;
+                default:
+                    Q_UNREACHABLE();
+                }
+            }
+
             doInteractiveResizeSync(nextMoveResizeGeom);
             Q_EMIT interactiveMoveResizeStepped(nextMoveResizeGeom);
         }
